// Vitest Snapshot v1

exports[`ListDOMSerializer > can serialize list nodes into <ol> 1`] = `
<DocumentFragment>
  <ol>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="list-content"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="list-content"
      >
        <p>
          B
        </p>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes into <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          B
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize list nodes with different types into a single <ul> 1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          A
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="task"
    >
      <div
        class="list-marker"
        contenteditable="false"
      >
        <label
          class="item-mark item-mark-task"
        >
          <input
            type="checkbox"
          />
        </label>
      </div>
      <div
        class="list-content"
      >
        <p>
          B
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="toggle"
    >
      <div
        class="list-marker"
        contenteditable="false"
      >
        <span />
      </div>
      <div
        class="list-content"
      >
        <p>
          C
        </p>
      </div>
    </li>
  </ul>
  <ol>
    <li
      class="flat-list"
      data-list=""
      data-list-type="ordered"
    >
      <div
        class="list-content"
      >
        <p>
          D
        </p>
      </div>
    </li>
  </ol>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          D
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="task"
    >
      <div
        class="list-marker"
        contenteditable="false"
      >
        <label
          class="item-mark item-mark-task"
        >
          <input
            type="checkbox"
          />
        </label>
      </div>
      <div
        class="list-content"
      >
        <p>
          E
        </p>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="toggle"
    >
      <div
        class="list-marker"
        contenteditable="false"
      >
        <span />
      </div>
      <div
        class="list-content"
      >
        <p>
          D
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDOMSerializer > can serialize nested list node  1`] = `
<DocumentFragment>
  <ul>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          A
        </p>
        <ol>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="list-content"
            >
              <p>
                B
              </p>
            </div>
          </li>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="list-content"
            >
              <p>
                C
              </p>
            </div>
          </li>
        </ol>
      </div>
    </li>
    <li
      class="flat-list"
      data-list=""
      data-list-type="bullet"
    >
      <div
        class="list-content"
      >
        <p>
          D
        </p>
        <ol>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="list-content"
            >
              <p>
                E
              </p>
            </div>
          </li>
          <li
            class="flat-list"
            data-list=""
            data-list-type="ordered"
          >
            <div
              class="list-content"
            >
              <p>
                F
              </p>
            </div>
          </li>
        </ol>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
